# SMITER

./: .gitignore  .pyup.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  check_and_fix_style.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example_data/: example_molecules.csv
example_scripts/: complex_mix_simulation.py  example_chromatogram.html  inspect_simulated_peak.py  molecule_summary.csv  plot_simulated_chromatogram.py  simulate_fasta.py  write_filtered_mzml.py  write_peptides.py  write_peptides.py.lprof  write_simulated_mzML.py  write_simulated_peaks_adenosine_inosine.py
smiter/: .pyre_configuration  __init__.py  cli.py  fragmentation_functions.py  lib.py  noise_functions.py  peak_distribution.py  synthetic_mzml.py  synthetic_mzml.py.bck  todos.md
smiter/ext/: __init__.py  get_modomics_csv.sh  modomics.csv  nucleoside_fragment_kb.py  test.csv  trim_lines.py
smiter/params/: default_params.py  header_param.py
tests/: __init__.py  proteomics-hackathon.sublime-project  proteomics-hackathon.sublime-workspace  test_fragmentation.py  test_lib.py  test_noise_injection.py  test_params.py  test_peak_distribution.py  test_smiter_cli.py  test_synthetic_mzml.py
tests/data/: molecules_test.csv
